--- a/views/css/style.css
+++ b/views/css/style.css
@@ -596,8 +596,11 @@ body .vjs-default-skin .vjs-big-play-button:focus{box-shadow: none;}
 .product-item .product-text h2{font-size: 30px;font-family: "Gotham Book";color: #4b3700;padding-bottom: 40px;text-transform: uppercase;line-height: 120%;}
 .product-item .product-text p,.product-item .product-text div{font-family: Garamond;color: rgb(158, 146, 122);font-size: 18px;line-height: 24px;padding:0 30px;}
 .product-item .product-image{width:63.53%; float:right;}
+.tablet .product-item .product-text {padding-top:20px;}
+.tablet .product-item .product-text h2 {padding-bottom:10px;}
 
 .product-item-right .product-text{float: right;}
+.btn-wantbuy {margin:80px auto;}
 
 
 .inout-effect{overflow: hidden;position: relative;}
