--- a/views/css/style.css
+++ b/views/css/style.css
@@ -720,6 +720,9 @@ body .vjs-default-skin .vjs-big-play-button:focus{box-shadow: none;}
 .lang-zh_cn .coll_videocom {
     font-size: 16px;
 }
+.lang-zh_cn .proinfortxt-inner p{
+    margin-bottom: 25px;
+}
 
 #job-popup h3 {
     display: inline-block;
