--- a/views/css/style.css
+++ b/views/css/style.css
@@ -501,7 +501,8 @@ a.press-lock{width: 250px;height: 60px;line-height: 60px;background: #4b3700 url
 .transition-wrap, .transition{-webkit-transition: all 0.2s linear;-moz-transition: all 0.2s linear;-o-transition: all 0.2s linear;-ms-transition: all 0.2s linear;transition: all 0.2s linear;}
 .transition-wrap{overflow: hidden;font-family: Garamond;color:#4b3700;}
 .transition-wrap .transition{display: block;position: relative;top:0%;}
-.transition-wrap:hover {border: 3px solid #9e927a;}
+.transition-wrap .transition:hover{top:-200%;}
+/*.transition-wrap:hover {border: 3px solid #9e927a;}*/
 
 
 /*video*/
